--- a/src/Rolog/Views/Users/index.html
+++ b/src/Rolog/Views/Users/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en" ng-app="rologApp">
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
@@ -20,7 +21,7 @@
         <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="/css/main.css">
 
-        <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+        <script src="/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -60,49 +61,22 @@
 	            		<a href="#" class="dropdown-toggle" data-toggle="dropdown">@Model.UserName <b class="caret"></b></a>
 	            		<ul class="dropdown-menu">
 			                <li><a href="/auth/logout">Logout</a></li>
-			              </ul>
+			            </ul>
 	            	</li>
 	            </ul>
 	          </div>
-	          </form>
 	        </div><!--/.navbar-collapse -->
 	      </div>
 	    </div>
+		
+		<div class="container">		
+			<div ng-view style="padding-left:20px; padding-right:20px"></div>
 	
-	    <!-- Main jumbotron for a primary marketing message or call to action -->
-	    <div class="jumbotron">
-	      <div class="container">
-	        <h1>User Home!</h1>
-	        <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-	        <p><a class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-	      </div>
-	    </div>
+			<hr>
 	
-	    <div class="container">
-	      <!-- Example row of columns -->
-	      <div class="row">
-	        <div class="col-lg-4">
-	          <h2>Heading</h2>
-	          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-	          <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
-	        </div>
-	        <div class="col-lg-4">
-	          <h2>Heading</h2>
-	          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-	          <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
-	       </div>
-	        <div class="col-lg-4">
-	          <h2>Heading</h2>
-	          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-	          <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
-	        </div>
-	      </div>
-	
-	      <hr>
-	
-	      <footer>
-	        <p>&copy; Company 2013</p>
-	      </footer>
+	      	<footer>
+	        	<p>&copy; Company </p>
+	      	</footer>
 	    </div> <!-- /container -->
 	    
 	    <div class="modal fade" id="loginModal">
@@ -124,7 +98,14 @@
 	
 	    <script src="/js/vendor/bootstrap.min.js"></script>
 	
+		
 	    <script src="/js/main.js"></script>
+	    <script src="/js/vendor/angular/angular.min.js"></script>
+	    <script src="/js/vendor/angular/angular-resource.min.js"></script>
+	    <script src="/js/vendor/angular/angular-route.min.js"></script>
+	    <script src="/js/app/app.js"></script>
+	    <script src="/js/app/controllers/UserController.js"></script>
+	    <script src="/js/app/controllers/UserCharacterController.js"></script>
 	
         <script>
             var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
